--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,9 @@ react {
 
     /* Autolinking */
     autolinkLibrariesWithApp()
+
+    /* Separate APKs per architecture */
+    enableSeparateBuildPerCPUArchitecture = true
 }
 
 /**
