--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,7 +10,7 @@ workflows:
     scripts:
       - name: Install dependencies
         script: |
-          npm install -g pnpm
+          corepack enable
           pnpm install
       - name: Create .env file
         script: |
