--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gossip",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "packageManager": "pnpm@10.25.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
