--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,6 +27,7 @@ workflows:
       - name: Build Android Release APK
         script: |
           cd android
+          chmod +x gradlew
           ./gradlew assembleRelease
     artifacts:
       - android/app/build/outputs/apk/release/*.apk
