fix: disable new architecture and optimize build for stability

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,8 +9,7 @@ workflows:
       node: 20
       java: 17
       vars:
-        NODE_OPTIONS: "--max-old-space-size=8192"
-        GRADLE_OPTS: "-Xmx8192m"
+        NODE_OPTIONS: "--max-old-space-size=4096"
     scripts:
       - name: Install dependencies
         script: |
@@ -25,6 +24,6 @@ workflows:
         script: |
           cd android
           chmod +x gradlew
-          ./gradlew clean assembleRelease --stacktrace --no-daemon
+          ./gradlew assembleRelease --stacktrace
     artifacts:
       - android/app/build/outputs/apk/release/*.apk
