--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,32 @@
 workflows:
+  android-debug:
+    name: Gossip Android Debug
+    max_build_duration: 60
+    instance_type: mac_mini_m2
+    environment:
+      groups:
+        - VAR
+      node: 20
+      java: 17
+      vars:
+        NODE_OPTIONS: "--max-old-space-size=4096"
+    scripts:
+      - name: Install dependencies
+        script: |
+          corepack enable
+          corepack prepare pnpm@10.25.0 --activate
+          pnpm install --no-frozen-lockfile
+      - name: Create .env file
+        script: |
+          echo "EXPO_PUBLIC_SUPABASE_URL=$EXPO_PUBLIC_SUPABASE_URL" > .env
+          echo "EXPO_PUBLIC_SUPABASE_ANON_KEY=$EXPO_PUBLIC_SUPABASE_ANON_KEY" >> .env
+      - name: Build Android Debug APK
+        script: |
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleDebug --stacktrace
+    artifacts:
+      - android/app/build/outputs/apk/debug/*.apk
   android-release:
     name: Gossip Android Release
     max_build_duration: 60
