fix: exhaustive android build overhaul (Java 21, Google Services, pnpm hoisting)

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,7 +7,7 @@ workflows:
       groups:
         - VAR
       node: 20
-      java: 17
+      java: 21
       vars:
         NODE_OPTIONS: "--max-old-space-size=4096"
     scripts:
@@ -16,10 +16,11 @@ workflows:
           corepack enable
           corepack prepare pnpm@10.25.0 --activate
           pnpm install --no-frozen-lockfile
-      - name: Create .env file
+      - name: Create .env and Setup Config
         script: |
           echo "EXPO_PUBLIC_SUPABASE_URL=$EXPO_PUBLIC_SUPABASE_URL" > .env
           echo "EXPO_PUBLIC_SUPABASE_ANON_KEY=$EXPO_PUBLIC_SUPABASE_ANON_KEY" >> .env
+          cp google-services.json android/app/google-services.json
       - name: Build Android Debug APK
         script: |
           cd android
@@ -35,7 +36,7 @@ workflows:
       groups:
         - VAR
       node: 20
-      java: 17
+      java: 21
       vars:
         NODE_OPTIONS: "--max-old-space-size=8192"
         GRADLE_OPTS: "-Xmx8192m"
@@ -45,10 +46,11 @@ workflows:
           corepack enable
           corepack prepare pnpm@10.25.0 --activate
           pnpm install --no-frozen-lockfile
-      - name: Create .env file
+      - name: Create .env and Setup Config
         script: |
           echo "EXPO_PUBLIC_SUPABASE_URL=$EXPO_PUBLIC_SUPABASE_URL" > .env
           echo "EXPO_PUBLIC_SUPABASE_ANON_KEY=$EXPO_PUBLIC_SUPABASE_ANON_KEY" >> .env
+          cp google-services.json android/app/google-services.json
       - name: Build Android Release APK
         script: |
           cd android
