fix: modernize gradle syntax and enable verbose warning mode

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,10 +127,10 @@ android {
             crunchPngs enablePngCrunchInRelease.toBoolean()
         }
     }
-    packagingOptions {
-        jniLibs {
+    packaging {
+        resources {
             def enableLegacyPackaging = findProperty('expo.useLegacyPackaging') ?: 'false'
-            useLegacyPackaging enableLegacyPackaging.toBoolean()
+            excludes += "/META-INF/*.kotlin_module"
         }
     }
     androidResources {
