--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,6 +88,14 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace 'com.ssabee1722.gossip'
+    splits {
+        abi {
+            reset()
+            enable true
+            universalApk false
+            include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+        }
+    }
     defaultConfig {
         applicationId 'com.ssabee1722.gossip'
         minSdkVersion rootProject.ext.minSdkVersion
@@ -97,11 +105,6 @@ android {
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
         
-        // Optimize: Only build for modern Arm64 phones.
-        // This cuts build time by 75% and fixes the 30-minute hang.
-        ndk {
-            abiFilters "arm64-v8a"
-        }
         multiDexEnabled true
     }
     signingConfigs {
