--- a/app.json
+++ b/app.json
@@ -54,9 +54,10 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/logo.png",
-          "imageWidth": 200,
+          "imageWidth": 240,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#050505",
+          "userInterfaceStyle": "light"
         }
       ],
       "expo-web-browser",
