--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
+        classpath 'com.google.gms:google-services:4.4.1'
     classpath('com.android.tools.build:gradle')
     classpath('com.facebook.react:react-native-gradle-plugin')
     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
@@ -14,8 +15,8 @@ buildscript {
 
 allprojects {
   repositories {
-    maven { url "https://maven.google.com" }
-    maven { url "https://repo1.maven.org/maven2" }
+    google()
+    mavenCentral()
     maven { url 'https://www.jitpack.io' }
   }
 }
