feat: Enhanced media handling, captions, and message actions
- Fixed media upload with proper base64 encoding for iOS compatibility
- Added media preview with caption input before sending
- Implemented separate reaction picker (tap) and delete menu (long press)
- Fixed image loading with proper URI encoding and error handling
- Updated Android adaptive icon to pink background
- Improved chat lock error handling to prevent error screens
- Enhanced typography consistency across iOS and Android
- Fixed receiver message bubble styling with gray background
- Added MessageActionsMenu component for delete/reply actions
- Optimized media upload to use Uint8Array buffer for reliability

--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#E91E63"
       },
       "edgeToEdgeEnabled": true,
       "permissions": [
