--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "snack-content": "^3.2.0",
     "tslib": "2.6.2",
     "url": "^0.11.0",
+    "rn-emoji-keyboard": "^6.4.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
