--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@shopify/react-native-skia": "2.2.12",
     "@stripe/stripe-react-native": "0.50.3",
     "@supabase/supabase-js": "^2.50.0",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^2.28.0",
     "dedent": "^0.7.0",
     "es6-error": "^4.1.1",
@@ -141,11 +142,11 @@
     "react-string-replace": "^0.4.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rn-emoji-keyboard": "^1.7.0",
     "semver": "^7.6.0",
     "snack-content": "^3.2.0",
     "tslib": "2.6.2",
     "url": "^0.11.0",
-    "rn-emoji-keyboard": "^1.7.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
