fix: increase memory allocation for Android release build
- Increase Gradle JVM heap from 2GB to 4GB
- Add dexOptions with 4GB heap for DEX compilation
- Disable parallel builds to reduce memory pressure
- Add build guide with APK location information

Fixes OutOfMemoryError during split APK packaging

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,13 @@ android {
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
     }
+    
+    // Optimize dex options to prevent OutOfMemoryError
+    dexOptions {
+        javaMaxHeapSize "4g"
+        preDexLibraries = true
+        maxProcessCount = 4
+    }
 }
 
 // Apply static values from `gradle.properties` to the `android.packagingOptions`
