fix: Resolve Android build CMake errors by disabling New Architecture
- Disabled newArchEnabled in gradle.properties to bypass codegen directory issues
- Added clean build step in codemagic.yaml to remove stale artifacts
- Created ANDROID_BUILD_FIX.md documenting the issue and solution

The build was failing because React Native's New Architecture requires
codegen directories for native modules, but these weren't being generated.
Disabling New Architecture allows the build to proceed with the old bridge.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -49,6 +49,11 @@ workflows:
         script: |
           echo "EXPO_PUBLIC_SUPABASE_URL=$EXPO_PUBLIC_SUPABASE_URL" > .env
           echo "EXPO_PUBLIC_SUPABASE_ANON_KEY=$EXPO_PUBLIC_SUPABASE_ANON_KEY" >> .env
+      - name: Clean build directories
+        script: |
+          cd android
+          rm -rf app/build app/.cxx .gradle
+          echo "✅ Cleaned build directories"
       - name: Build Android Release Split APKs
         script: |
           cd android
