--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,12 +82,12 @@ def enableMinifyInReleaseBuilds = (findProperty('android.enableMinifyInReleaseBu
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion = rootProject.ext.ndkVersion
 
     buildToolsVersion rootProject.ext.buildToolsVersion
-    compileSdk rootProject.ext.compileSdkVersion
+    compileSdk = rootProject.ext.compileSdkVersion
 
-    namespace 'com.ssabee1722.gossip'
+    namespace = 'com.ssabee1722.gossip'
     defaultConfig {
         applicationId 'com.ssabee1722.gossip'
         minSdkVersion rootProject.ext.minSdkVersion
@@ -100,7 +100,7 @@ android {
     splits {
         abi {
             reset()
-            enable true
+            enable = true
             universalApk false
             include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
