fix: Complete Gradle 8.14 syntax migration
Fixed all remaining deprecated property assignments:
- universalApk = false (splits.abi)
- signingConfig = signingConfigs.debug (buildTypes)
- shrinkResources = enableShrinkResources.toBoolean()

This resolves all Gradle deprecation warnings that were causing
the build configuration to fail.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         abi {
             reset()
             enable = true
-            universalApk false
+            universalApk = false
             include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
     }
@@ -115,14 +115,14 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.debug
+            signingConfig = signingConfigs.debug
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig = signingConfigs.debug
             def enableShrinkResources = findProperty('android.enableShrinkResourcesInReleaseBuilds') ?: 'false'
-            shrinkResources enableShrinkResources.toBoolean()
+            shrinkResources = enableShrinkResources.toBoolean()
             minifyEnabled enableMinifyInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             def enablePngCrunchInRelease = findProperty('android.enablePngCrunchInReleaseBuilds') ?: 'true'
