fix: Correctly build for New Architecture (required by Reanimated 4.x)
- Re-enabled New Architecture in gradle.properties
- Updated pnpm install with --shamefully-hoist to fix node_modules structure for RN CLI
- Added explicit 'Generate Codegen' step in codemagic.yaml
- Added safety check in app/build.gradle to create missing codegen directories for CMake

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,25 @@ def enableMinifyInReleaseBuilds = (findProperty('android.enableMinifyInReleaseBu
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
 
 android {
+    // Hack to fix CMake error when codegen directories for autolinked libraries are missing
+    preBuild.doFirst {
+        def jniDir = file("$projectDir/build/generated/autolinking/src/main/jni")
+        if (jniDir.exists()) {
+            jniDir.eachFileMatch(~/.*\.cmake/) { cmakeFile ->
+                cmakeFile.eachLine { line ->
+                    def matcher = line =~ /add_subdirectory\("([^"]+)"\)/
+                    if (matcher.find()) {
+                        def subDir = file(matcher.group(1))
+                        if (!subDir.exists()) {
+                            println "Pre-build: Creating missing directory required by CMake: ${subDir}"
+                            subDir.mkdirs()
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     ndkVersion = rootProject.ext.ndkVersion
 
     buildToolsVersion rootProject.ext.buildToolsVersion
