--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "expo-system-ui": "~6.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-video": "~3.0.15",
+    "expo-video-thumbnails": "~10.0.8",
     "expo-web-browser": "~15.0.10",
     "graphql": "^15.3.0",
     "immutable": "^4.0.0",
