--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,16 +10,12 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-# Increased to 4GB to handle split APK packaging
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# Disabled parallel builds to reduce memory pressure during release builds
-org.gradle.parallel=false
-org.gradle.daemon=true
-org.gradle.configureondemand=true
+org.gradle.parallel=true
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -28,10 +24,6 @@ android.useAndroidX=true
 
 # Enable AAPT2 PNG crunching
 android.enablePngCrunchInReleaseBuilds=true
-android.enableMinifyInReleaseBuilds=true
-android.enableShrinkResourcesInReleaseBuilds=true
-android.enableBundleCompression=true
-
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
@@ -43,7 +35,6 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-# Temporarily disabled due to codegen directory issues
 newArchEnabled=true
 
 # Use this property to enable or disable the Hermes JS engine.
