--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,8 +22,17 @@ org.gradle.parallel=true
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-# Enable AAPT2 PNG crunching
-android.enablePngCrunchInReleaseBuilds=true
+# Enable AAPT2 PNG crunching (disable to save build time since we optimize images manually)
+android.enablePngCrunchInReleaseBuilds=false
+
+# Enable R8 minification and code shrinking in release builds
+android.enableMinifyInReleaseBuilds=true
+
+# Enable resource shrinking to remove unused resources
+android.enableShrinkResourcesInReleaseBuilds=true
+
+# Enable bundle compression for smaller APK size
+android.enableBundleCompression=true
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
